name:                nitro
version:             0.2.2.1
synopsis:            Haskell bindings for Nitro
description:         Nitro is a secure message-passing network applications library.
license:             BSD3
license-file:        LICENSE
author:              Erin Dahlgren
maintainer:          edahlgren@bu.mp
homepage:            <https://bumptech.github.io/nitro-haskell>
category:            System, FFI
build-type:          Simple
stability:           experimental
tested-with:         GHC == 7.6.1
cabal-version:       >=1.8
extra-source-files:  c-bits/*.h
                     c-bits/uthash/*.h

library
  exposed-modules: System.Nitro
  build-depends:   base ==4.6.*,
                   bytestring

  extensions: ForeignFunctionInterface, CPP

  include-dirs: c-bits
  c-sources: dist/build/System/Nitro.chs.c
  build-tools: c2hs
  cc-options:  -std=gnu99 -Wall -Werror
  extra-libraries: nitro nitronacl ev pthread

executable braveknight
  main-is: examples/BraveKnight.hs
  build-depends: base == 4.6.*,
                 bytestring,
                 nitro

  extensions: ForeignFunctionInterface

executable dyingman
  main-is: examples/DyingMan.hs
  build-depends: base == 4.6.*,
                 bytestring,
                 nitro

  extensions: ForeignFunctionInterface

executable pubsub
  main-is: examples/PubSub.hs
  build-depends: base == 4.6.*,
                 bytestring,
                 nitro

  extensions: ForeignFunctionInterface

executable proxy
  main-is: examples/Proxy.hs
  build-depends: base == 4.6.*,
                 bytestring,
                 nitro

  extensions: ForeignFunctionInterface

executable threaded
  main-is: examples/Threaded.hs
  build-depends: base == 4.6.*,
                 bytestring,
                 nitro

  extensions: ForeignFunctionInterface
  ghc-options: -threaded

executable distributed
  main-is: examples/Distributed.hs
  build-depends: base == 4.6.*,
                 bytestring,
                 nitro

  extensions: ForeignFunctionInterface
  ghc-options: -threaded
