name:                nitro
version:             0.2.2.5
synopsis:            Haskell bindings for Nitro
description:         Nitro is a secure message-passing network applications library.
license:             BSD3
license-file:        LICENSE
author:              Erin Dahlgren
maintainer:          edahlgren@bu.mp
homepage:            http://haskell.gonitro.io
category:            System, FFI
build-type:          Configure
stability:           experimental
tested-with:         GHC == 7.6.1
cabal-version:       >=1.8

extra-source-files:
  configure
  nitro.buildinfo.in
  include/nitrocfg.h.in

library
  exposed-modules: System.Nitro
  build-depends:   base ==4.6.*,
                   bytestring

  extensions: ForeignFunctionInterface, CPP
  c-sources: dist/build/System/Nitro.chs.c
  build-tools: c2hs

executable braveknight
  main-is: examples/BraveKnight.hs
  build-depends: base == 4.6.*,
                 bytestring,
                 nitro

  extensions: ForeignFunctionInterface

executable dyingman
  main-is: examples/DyingMan.hs
  build-depends: base == 4.6.*,
                 bytestring,
                 nitro

  extensions: ForeignFunctionInterface

executable pubsub
  main-is: examples/PubSub.hs
  build-depends: base == 4.6.*,
                 bytestring,
                 nitro

  extensions: ForeignFunctionInterface

executable proxy
  main-is: examples/Proxy.hs
  build-depends: base == 4.6.*,
                 bytestring,
                 nitro

  extensions: ForeignFunctionInterface

executable threaded
  main-is: examples/Threaded.hs
  build-depends: base == 4.6.*,
                 bytestring,
                 nitro

  extensions: ForeignFunctionInterface
  ghc-options: -threaded

executable distributed
  main-is: examples/Distributed.hs
  build-depends: base == 4.6.*,
                 bytestring,
                 nitro

  extensions: ForeignFunctionInterface
  ghc-options: -threaded

source-repository head
  type: git
  location: git://github.com/bumptech/nitro-haskell.git
